DB tables updated with latest data

--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -3,7 +3,11 @@
 	<td><%= report.doctor.lname rescue 'All' %> </td> 
 	<td><%= REPORT_TYPES.invert[report.rtype] %></td> 
 	<td><%= report.sdate %></td>
-	<td><%= report.edate %></td>
+	<td>
+	<% if report.rtype > 1 %>
+	<%= report.edate %>
+	<% end %>
+	</td>
 
   	<% if current_user.admin?  %>
 		<td> <%= link_to "delete", report, method: :delete, data: { confirm: "Are you sure you want to delete #{report.name}?" } %> </td>
