--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -6,7 +6,7 @@
           <th>Report</th>
           <th>Doctor</th>
           <th>Type</th>
-          <th>From</th>
+          <th>Date</th>
           <th>To</th>
 	   <% if current_user.admin?  %>
           <th></th>
