--- a/app/views/reports/_visit.html.erb
+++ b/app/views/reports/_visit.html.erb
@@ -2,13 +2,13 @@
 <% doctor = Doctor.find(visit.doc_id) %>
 <% diagnosis = Diagnosis.find_by(code: visit.diag_code) %>
 <tr>
-	<td><%= visit.entry_ts.strftime("%d/%m/%Y %H:%M") %></td>
+	<td><%= visit.entry_ts.strftime("%d-%b-%Y %H:%M") %></td>
 	<td><%= visit.id %></td>
-	<td><%= patient.full_name[0,20] %> </td>
+	<td><%= patient.full_name %> </td>
 	<td><%= patient.ohip_num_full %> </td>
 	<td><%= visit.diag_code %></td>
 	<td><%= visit.proc_codes %></td>
-	<td><%= visit.bil_types %></td>
+	<td><%= BILLING_TYPES.invert[visit.bil_type] %></td>
 	<td><%= sprintf("%.2f",visit.total_fee) %></td>
 	<td><%= visit.status_str %></td>
 	<td><%= visit.entry_by %></td>
