--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -2,10 +2,8 @@
 <% provide(:button_text, "Update Patient's Record") %>
 <h1><%= @patient.full_name  %> : patient's profile</h1>
 
-<div class="row justify-content-md-center">
-	<div class="col-md-10 col-md-offset-1">
+<div class="col-md-11 col-sm-12 col-md-offset-2 col-sm-offset-1">
 
 	<%= render 'form' %>
 
-	</div>
 </div>
