--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -10,7 +10,8 @@
 	  <th>Units</th>
 	  <th>Diag req?</th>
 	  <th>Eff Date</th>
-	  <th>Active</th>
+	  <th><%= sortable 'active' %></th>
+	  <th></th>
       </tr>
   </thead>
   <tbody>
