--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -7,6 +7,7 @@
 	<td><%= @provider.name %> </td> 
 	<td><%= @patient.full_name %></td> 
 	<td><%= invoice.date %></td> 
+	<td>$<%= invoice.amount %></td> 
   	<% if current_user.admin?  %>
 		<td> <%= link_to "delete", invoice, method: :delete, data: { confirm: "Are you sure you want to delete invoice # #{invoice.id}?" } %> </td>
 	<% end %>
