--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,11 +1,7 @@
 <% provide(:title, 'New Patient') %>
 <% provide(:button_text, "Save Patient's record") %>
-<h1>Sign up</h1>
+<h1>Patient Sign up</h1>
 
-<div class="row justify-content-md-center">
-	<div class="col-md-10 col-md-offset-1">
-	
+<div class="col-md-11 col-sm-12 col-md-offset-2 col-sm-offset-1">
     	<%= render 'form' %>
-
-	</div>
 </div>
