--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -5,13 +5,13 @@
   <thead>
       <tr>
 	  <% if date  %>
-	    <th class="tbl_lsm">Time</th>
+	    <th class="tbl_lsm"><%= sortable 'entry_ts', :Time %></th>
 	  <% else %>
-	    <th class="tbl_md">Date</th>
+	    <th class="tbl_md"><%= sortable 'entry_ts', :Date %></th>
 	  <%end %>
           <th class="tbl_md">Doctor</th>
 	  <th class="tbl_lsm">Visit Id</th>
-          <th class="tbl_lmd">Patient</th>
+	  <th class="tbl_lmd">Patient</th>
           <th class="tbl_md">Health #</th>
           <th class="tbl_sm">Ver</th>
           <th class="tbl_lmd">Procedure(s)</th>
