--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,6 +51,7 @@
          	<li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
          	<li> <%= link_to "Vaccines", vaccines_path, method: :get %> </li>
          	<li> <%= link_to "Daily Charts", daily_charts_path, method: :get %> </li>
+         	<li> <%= link_to "Export Files", export_files_path, method: :get %> </li>
             </ul>
           </li>
 <% end %>
