--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for (@patient) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
+<div class="col-md-11 col-sm-12 col-md-offset-2 col-sm-offset-1">
 <div class="row">
   <div class="col-sm-2">
   <%= f.label 'Last Name' %>
@@ -11,7 +12,6 @@
   <%= f.label :'First Name' %>
   <%= f.text_field :fname %>
   </div>
-
 
   <div class="col-sm-2">
   <%= f.label :'Middle Name' %>
@@ -152,8 +152,9 @@
 <div class="row">
   <div class="spacer-20"></div>
   <div class="col-sm-10 col-md-8">
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  <%= f.submit "Save Patient's record", class: "btn btn-primary" %>
   </div>
+</div>
 </div>
 
 <% end %>
