--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -8,53 +8,63 @@
 
 <% diag = Diagnosis.find_by(code: @visit.diag_code) %>
 <% codes = [@visit.proc_code, @visit.proc_code2, @visit.proc_code3, @visit.proc_code4] %>
+
+<div class="form-group col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
 <div class="row">
-  <aside class="col-md-6 col-md-offset-3">
-    <section class="user_info">
-	   <pre>
-		<b>Visit Type:</b> <%= VISIT_TYPES.invert[@visit.vis_type] %>
-		<b>Doctor</b> :    <%= @visit.doctor.lname %>
-		<b>Reason for Visit </b>: <%= @visit.reason %>
-		<b>Vital signs</b>: T: <%= @visit.temp %> P: <%= @visit.pulse %> BP: <%= @visit.bp %>
-		<b>Diagnosis</b> : <%= @visit.diag_code %> : <%= diag.descr rescue '' %>
-		<b>Procedure(s)</b> : <%=  @visit.proc_codes %>
-		<b>Billing Type(s) </b>: <%= @visit.bil_type_str %>, <%= @visit.bil_type2_str %>, <%= @visit.bil_type3_str %>, <%= @visit.bil_type4_str %>
-		<b>Units </b>: <%= @visit.units %>
-		<b>Duration </b>: <%= @visit.duration %> minutes
-		<b>Status </b>: <%= @visit.status_str %> 
-		<b>Total fee </b>: <%=  sprintf '$%.2f',@visit.total_fee %>
-		<b>Entry by </b>: <%= @visit.entry_by %>
-		<b>Entered at </b>: <%= @visit.entry_ts %>
-		<b>Notes </b>: <%= @visit.notes %>	     
-		<% if @visit.provider_id %>
-       	  	<% prov = Provider.find( @visit.provider_id ) %>
-		<b>Insurance Provider </b>: <%= prov.name rescue '' %>
-                <% end %>
-		<b>Export file </b>: <%= "#{@visit.export_file}" %>
-           </pre>
-    </section>
+<pre>
+<b>Doctor</b> :    <%= @visit.doctor.lname %>
+<b>Reason for Visit </b>: <%= @visit.reason %>
+<b>Vital signs</b>: T: <%= @visit.temp %> P: <%= @visit.pulse %> BP: <%= @visit.bp %>
+<b>Diagnosis</b> : <%= @visit.diag_code %> : <%= diag.descr rescue '' %>
+<b>Procedure(s)</b> : <%=  @visit.proc_codes %>
+<b>Billing Type(s) </b>: <%= @visit.bil_type_str %>, <%= @visit.bil_type2_str %>, <%= @visit.bil_type3_str %>, <%= @visit.bil_type4_str %>
+<b>Units </b>: <%= @visit.services.collect{|s| s[:units]}.join',' %>
+<b>Duration </b>: <%= @visit.duration %> minutes
+<b>Status </b>: <%= @visit.status_str %> 
+<b>Insured services: </b><%= sprintf '$%.2f',@visit.total_insured_fees %> <b>Other services:</b> <%= sprintf '$%.2f',@visit.total_non_insured_fees %> <b>Total:</b> <%=  sprintf '$%.2f',@visit.total_fee %>
+<b>Entry by </b>: <%= @visit.entry_by %>
+<b>Entered at </b>: <%= @visit.entry_ts %>
+<b>Notes </b>: <%= @visit.notes %>	     
+<% if @visit.provider_id %>
+<% prov = Provider.find( @visit.provider_id ) %>
+<b>Insurance Provider </b>: <%= prov.name rescue '' %>
+<% end %>
+<b>Export file </b>: <%= "#{@visit.export_file}" %>
+</pre>
+</div>
+</div>
 
-<p>
+<div class="form-group col-sm-10 col-md-12 col-sm-offset-1 col-md-offset-1">
+<div class="row">
+ <div class="col-sm-2">
   <%= button_to "Edit Visit", edit_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
-<p>
+ </div>
+ <div class="col-sm-2">
  <%= button_to "Print Visit Form", visitform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
-<p>
+ </div>
+ <div class="col-sm-2">
  <%= button_to "Print Referral Form", referralform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
+ </div>
 
-<p>
  <% if @visit.cash? %> 
+ <div class="col-sm-2">
  <%= button_to "Print Receipt", receipt_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
+ </div>
  <% end %>
  
  <% if @visit.invoiced? %> 
+ <div class="col-sm-2">
  <%= button_to "Print Invoice", invoice_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
+ </div>
  <% end %>
 
  <% if @visit.ready_to_bill? %>
+ <div class="col-sm-2">
  <%= button_to "Send to Cab.md", sendclaim_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
+ </div>
  <% end %>
 
-  </aside>
+</div>
 </div>
 
 
