tweaks to visit fees

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -13,7 +13,7 @@
 	      <% end %>
 	      Visits:     <%= @visits.count %>
 
-	      Grand Total: <b><%= @total.round(2) %></b>
+	      Grand Total: <b>$<%= @total.round(2) %></b> Insured: <b>$<%= @insured.round(2) %></b> Uninsured: <b>$<%= @uninsured.round(2) %></b>
            </pre>
 
 <table> <!--class="table table-hover table-condensed" > -->
