--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -50,8 +50,8 @@
 	    <th class="tbl_lg">Doctor</th>
 	    <th>Diagnosis</th>
 	    <th class="tbl_xlg">Procedure(s)</th>
-	    <th>Type</th>
 	    <th>Status</th>
+	    <th>CabMD Ref#</th>
 	  </tr>
 	  <tbody>
 
