--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -20,9 +20,7 @@
           <th class="tbl_sm">Units</th>
           <th class="tbl_sm">Bil.Type</th>
           <th class="tbl_sm">Status</th>
-          <% if current_user.admin?  %>
-          <th class="tbl_sm"> </th>
-  	  <% end %>
+          <th class="tbl_sm">CabMd Ref </th>
       </tr>
   </thead>
   <tbody>
