--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -5,6 +5,6 @@
   <td><%= visit.diag_scode %></td>
   <td><%= visit.proc_codes %></td>
   <td><%= VISIT_STATUSES.invert[visit.status] %></td>
-  <td><%= visit.vis_type %></td>
+  <td><%= visit.export_file %></td>
 </tr>
 
