--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -9,7 +9,12 @@
 <table class="tbl table-hover" >
   <thead>
       <tr>
-	  <th class="tbl_sm">Time</th>
+	  <% if date  %>
+	    <th class="tbl_lsm"><%= sortable 'entry_ts', :Time %></th>
+	  <% else %>
+	    <th class="tbl_md"><%= sortable 'entry_ts', :Date %></th>
+	  <%end %>
+
           <th class="tbl_md">Doctor</th>
           <th class="tbl_md">Patient</th>
           <th class="tbl_lsm">Health #</th>
