reports, edit link in daysheet

--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -25,6 +25,7 @@
           <th class="tbl_sm">Bil.Type</th>
           <th class="tbl_sm">Status</th>
           <th class="tbl_lsm"></th>
+          <th class="tbl_lsm"></th>
       </tr>
   </thead>
   <tbody>
