--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -23,7 +23,7 @@
           <th class="tbl_xmd">Procedures</th>
           <th class="tbl_sm">Units</th>
           <th class="tbl_sm">Bil.Type</th>
-          <th class="tbl_sm">Status</th>
+          <th class="tbl_lsm">Status</th>
           <th class="tbl_lsm"></th>
           <th class="tbl_lsm"></th>
       </tr>
