--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -16,10 +16,10 @@
 	  <%end %>
 
           <th class="tbl_md">Doctor</th>
-          <th class="tbl_md">Patient</th>
+          <th class="tbl_lmd">Patient</th>
           <th class="tbl_lsm">Health #</th>
-          <th class="tbl_lsm">Ver.</th>
-          <th class="tbl_xmd">Diagnosis</th>
+          <th class="tbl_sm">Ver.</th>
+          <th class="tbl_lsm">Diagnosis</th>
           <th class="tbl_xmd">Procedures</th>
           <th class="tbl_sm">Units</th>
           <th class="tbl_sm">Bil.Type</th>
