--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -35,7 +35,7 @@
   <% else %>
 	  <%= button_to "Send claims to Cab.md", billings_export_cabmd_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}   %>
 	  &nbsp;&nbsp;
-	  <%= button_to "Export Claims File (CSV)", billings_export_csv_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}  %>
+	  <!--   button_to "Export Claims File (CSV)", billings_export_csv_path, class: "btn btn-primary col-md-12", method: 'post', params: {date: date}  -->
      <% end %>
 </div>
 
